--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
-<html >
-
+<html lang="en-US">
 <head>
-  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CO2 Emission Predictor</title>
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-
 </head>
 
 <body>
- <div class="login">
-	<h1>Predict CO2 Emission of Vehicles</h1>
-     <h3> Enter the following values to predict the CO2 emission from the vehicle</h3>
-
-     <!-- Main Input For Receiving Query to our ML -->
-    <form action="{{ url_for('predict')}}"method="post">
-    	<input type="text" name="enginesize" placeholder="Engine Size" required />
-        <input type="text" name="cylinders" placeholder="Cylinders" required />
-		<input type="text" name="fuel" placeholder="Fuel" required="required" />
-
-        <button type="submit" class="btn">Predict</button>
-    </form>
-
+    <div class = "form-container">
+        <div class = "form-wrapper">
+          <span class='logo'>Predict CO2 Emission of Vehicles</span>
+          <span class='title'>Enter the following values to predict the CO2 emission from the vehicle</span>
+            <form action="{{ url_for('predict')}}"method="post">
+              <input type="text" name="enginesize" placeholder="Engine Size" required />
+              <input type="text" name="cylinders" placeholder="Cylinders" required />
+              <input type="text" name="fuel" placeholder="Fuel" required="required" />
+              <button type="submit">Predict</button>
+            </form>   
+        </div>
    <br>
    <br>
    {{ prediction_text }}
