--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
               generally translates to lower CO2 emissions.
             </p>
             <ul>
-              Typical range: 5.0 - 15.0 L/100km
+              <li>Typical range: 5.0 - 15.0 L/100km</li>
             </ul>
           </div>
         </div>
